--- a/styles.css
+++ b/styles.css
@@ -93,20 +93,26 @@ body {
   width: 300px;
   max-width: 100%;
   font-size: 1.1rem;
-  color: #333;
+  color: #fff;
+  background: #0070f3; /* blue */
   border: none;
   border-radius: 4px;
 }
 
+#email-input::placeholder {
+  color: #dce9f9;
+}
+
 #subscribe-button {
   padding: 0.8rem 2rem;
-  background: #0070f3;
+  background: #8300e9;
   border: none;
   color: #fff;
   cursor: pointer;
   font-size: 1.1rem;
   border-radius: 4px;
 }
+
 
 #subscribe-button:hover {
   background: #005dc1;
